--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+/public/js/app.js
+/public/js/app.js.map
+/public/css/app.css
+/public/css/app.css.map
+/public/build
 /vendor
 /node_modules
 Homestead.yaml
 Homestead.json
 .env
+npm-debug.log
