Auth Styles, btn and input styles

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-/public/js/app.js
-/public/js/app.js.map
-/public/css/app.css
-/public/css/app.css.map
+/public/js/all.js
+/public/js/all.js.map
+/public/css/all.css
+/public/css/all.css.map
 /public/build
 /vendor
 /node_modules
