--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8"
+    "dateformat": "^1.0.11",
+    "gulp": "^3.8.8",
+    "gulp-util": "^3.0.6"
   },
   "dependencies": {
     "laravel-elixir": "^3.0.0",
