--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.1.*",
         "illuminate/html": "5.*",
         "intervention/image": "2.3.2",
-        "laracasts/flash": "~1.3"
+        "laracasts/flash": "~1.3",
+        "doctrine/dbal": "*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
