--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "autoload": {
         "classmap": [
-            "database"
+            "database",
+            "app/Libraries"
         ],
         "psr-4": {
             "TargetInk\\": "app/"
