--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laracasts/flash": "~1.3",
         "doctrine/dbal": "*",
         "rigor789/airbrake-laravel": "^1.2",
-        "twbs/bootstrap": "3.*"
+        "twbs/bootstrap": "3.*",
+        "barryvdh/laravel-debugbar": "^2.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
