--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "twbs/bootstrap": "3.*",
         "barryvdh/laravel-debugbar": "^2.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "league/glide": "^0.3.5"
+        "league/glide": "^0.3.5",
+        "proengsoft/laravel-jsvalidation": "~1.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
