--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "twbs/bootstrap": "3.*",
         "barryvdh/laravel-debugbar": "^2.0",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "league/glide": "^1.0",
-        "proengsoft/laravel-jsvalidation": "~1.1"
+        "proengsoft/laravel-jsvalidation": "~1.1",
+        "league/glide-laravel": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
