--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.2.*",
+        "laravel/framework": "5.1.*",
+        "illuminate/html": "5.*",
         "intervention/image": "2.3.2",
         "laracasts/flash": "~1.3",
         "doctrine/dbal": "*",
@@ -15,17 +16,14 @@
         "barryvdh/laravel-debugbar": "^2.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "proengsoft/laravel-jsvalidation": "~1.1",
-        "league/glide-laravel": "^1.0",
-        "laravelcollective/html": "5.2.*"
+        "league/glide-laravel": "^1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "phpspec/phpspec": "~2.1",
-        "whatthejeff/nyancat-phpunit-resultprinter": "~1.2",
-        "symfony/dom-crawler": "~3.0",
-        "symfony/css-selector": "~3.0"
+        "whatthejeff/nyancat-phpunit-resultprinter": "~1.2"
     },
     "autoload": {
         "classmap": [
