--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "barryvdh/laravel-debugbar": "^2.0",
         "league/flysystem-aws-s3-v3": "~1.0",
         "proengsoft/laravel-jsvalidation": "~1.1",
-        "league/glide-laravel": "^1.0"
+        "league/glide-laravel": "^1.0",
+        "mews/captcha": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
