Changes to sci setup

--- a/.env.scrutinizer
+++ b/.env.scrutinizer
@@ -1,7 +1,17 @@
 APP_KEY=ASvcgDKMRIN458g52zfVEd9CxDs6PR7c
 APP_DEBUG=true
-APP_ENV=local
+APP_ENV=testing
 DB_HOST=127.0.0.1
 DB_DATABASE=tim
 DB_USERNAME=root
 DB_PASSWORD=
+
+CACHE_DRIVER=file
+SESSION_DRIVER=file
+QUEUE_DRIVER=sync
+
+MAIL_DRIVER=smtp
+MAIL_HOST=mailtrap.io
+MAIL_PORT=25
+MAIL_USERNAME=571250fb1738cd62d
+MAIL_PASSWORD=37fc2bc65f8981
