--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -27,7 +27,7 @@ build:
     tests:
         override:
             -
-                command: 'phpunit --coverage-clover=coverage.xml -d zend.enable_gc=0'
+                command: 'phpunit --coverage-clover=coverage.xml'
                 coverage:
                     file: 'coverage.xml'
                     format: 'php-clover'
