--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "league/flysystem-aws-s3-v3": "~1.0",
         "proengsoft/laravel-jsvalidation": "~1.1",
         "league/glide-laravel": "^1.0",
-        "mews/captcha": "^2.1"
+        "anhskohbo/no-captcha": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
